--- a/html/game-app.html
+++ b/html/game-app.html
@@ -499,23 +499,128 @@
                     </ul>
                 </div>
                 <div class="game-app__main__div2__left__div3">
-                   <div>
+                   <div >
                         <h3>TOP SẢN PHẨM GAMING KHUYẾN MÃI</h3>
                         <ul>
-                            <li>
+                            <li id="1">
                                 Phụ kiện Gaming
                             </li>
-                            <li>
+                            <li id="2">
                                 Laptop Gaming
                             </li>
-                            <li>
+                            <li id="3">
                                 Điện thoại Gaming
                             </li>
                         </ul>
                    </div>
                    <div class="game-app-divphukiengaming">
-                        <div>
-                            <div>
+                        <div class="game-app-divphukiengaming__slick">
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
+                                <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
+                                <p>
+                                    Chuột có dây Gaming Asus Keris
+                                </p>
+                                <p>
+                                    Chỉ bán online
+                                </p>
+                                <p>
+                                    590.000đ
+                                </p>
+                                <p>
+                                    1.250.000đ
+                                </p>
+                            </div>
+                            <div class="game-app-slick">
                                 <img src="../asset/img/game-app/game-app-phukien1.jpeg" alt="">
                                 <p>
                                     Chuột có dây Gaming Asus Keris
@@ -531,20 +636,28 @@
                                 </p>
                             </div>
                         </div>
-                        <a href="#">Xem thêm phụ kiện Gaming <ion-icon name="caret-forward-outline"></ion-icon></a>
-                   </div>
+                        <div>
+                            <a href="#">Xem thêm phụ kiện Gaming <ion-icon name="caret-forward-outline"></ion-icon></a>
+                        </div>
+                    </div>
                    <div class="game-app-divlaptopgaming">
-                        <div>
+                        <div class="game-app-divlaptopgaming__slick">
 
                         </div>
+                        <div>
                         <a href="#">Xem thêm Laptop Gaming <ion-icon name="caret-forward-outline"></ion-icon></a>
-                   </div>
-                   <div class="game-app-divdienthoaigaming">
-                        <div>
 
                         </div>
+                    </div>
+                   <div class="game-app-divdienthoaigaming">
+                        <div class="game-app-divdienthoaigaming__slick">
+
+                        </div>
+                        <div>
                         <a href="#">Xem thêm Điện thoại Gaming <ion-icon name="caret-forward-outline"></ion-icon></a>
-                   </div>
+
+                        </div>
+                    </div>
                 </div>
               
                 <div class="game-app__main__div2__left__div1">
