--- a/html/homepage.html
+++ b/html/homepage.html
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="header__main__smartwatch"><a href=""><img
+                <li class="header__main__smartwatch"><a href="./smartwatch.html"><img
                             src="https://cdn.tgdd.vn//content/icon-smartwatch-96x96-1.png" alt=""> SmartWatch</a></li>
                 <li class="header__main__watch"><a href="./dong-ho.html"><img
                             src="https://cdn.tgdd.vn//content/watch-icon-96x96.png" alt="">Đồng hồ</a></li>
