--- a/html/dien-thoai.html
+++ b/html/dien-thoai.html
@@ -4,15 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lịch sử đơn hàng</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="../css/file.css">
-    
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="../js/App.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script></head>
 <body>
     <div class="header-top-banner">
         <img src="../asset/img/homepage/head-banner1.png" alt="">
@@ -168,7 +161,20 @@
         </div>
     </header>
     <main>
-
+        <div class="laptop__slider-banner">
+            <div class="laptop-slider">
+                    <img src="../asset/img/laptop/laptop-slider1.png" alt="">
+                    <img src="../asset/img/laptop/laptop-slider2.png" alt="">
+                    <img src="../asset/img/laptop/laptop-slider3.png" alt="">
+                    <img src="../asset/img/laptop/laptop-slider4.png" alt="">
+                    <img src="../asset/img/laptop/laptop-slider5.png" alt="">
+            </div>
+            <div class="laptop-banner">
+                    <img src="../asset/img/laptop/laptop-banner1.png" alt="">
+                    <img src="../asset/img/laptop/laptop-banner2.png" alt="">
+            
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer__above">
@@ -309,6 +315,14 @@
             </p>
         </div>
     </footer>
-  
+   
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/App.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 </body>
 </html>
