--- a/html/game-app.html
+++ b/html/game-app.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game App</title>
+
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="../css/file.css">
 </head>
@@ -15,7 +16,7 @@
         <img src="../asset/img/homepage/head-banner2.png" alt="">
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
-
+  
 
 
     <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
@@ -692,7 +693,8 @@
                             <p>
                                 1.250.000đ
                             </p>
-                        </div> <div class="game-app-slick">
+                        </div> 
+                        <div class="game-app-slick">
                             <img src="../asset/img/game-app/game-app-laptop1.jpg" alt="">
                             <p>
                                 Chuột có dây Gaming Asus Keris
