--- a/html/hoi-dap.html
+++ b/html/hoi-dap.html
@@ -250,7 +250,7 @@
                         </div>
                         <ul>
                             <li><a href="">Thương hiệu - Dòng sản phẩm nổi bật</a></li>
-                            <li><a href="">Mẹo = Hướng dẫn sử dụng</a></li>
+                            <li><a href="">Mẹo - Hướng dẫn sử dụng</a></li>
                             <li><a href="">Tư vấn chọn mua</a></li>
                             <li><a href="">Tư vấn quà tặng</a></li>
                         </ul>
