--- a/html/tablet.html
+++ b/html/tablet.html
@@ -4,10 +4,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width="" , initial-scale=1.0">
     <title>Tablet</title>
+    <link rel="icon" type="image/x-icon" href="../asset/logo.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="../css/file.css">
 </head>
 <body>
+    <div class="form">
+        <div>
+            <div class="form-top">
+                <div class="form-top-top">
+                    <p>
+                        Địa chỉ đã chọn: Phường Điện Biên, Quận Ba Đình, Hà Nội
+                    </p>
+                    <button>
+                        <ion-icon name="close-outline"></ion-icon> Đóng
+                    </button>
+                </div>
+                <form action="">
+                    <ion-icon name="search-outline"></ion-icon>
+                    <input type="text">
+                </form>
+            </div>
+            <div class="form-bottom">
+                <h4>
+                    Hoặc chọn tỉnh, thành phố
+                </h4>
+                <ul>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
   <div class="header-top-banner">
     <img src="../asset/img/homepage/head-banner1.png" alt="">
     <img src="../asset/img/homepage/head-banner2.png" alt="">
@@ -51,7 +137,7 @@
                         src="https://cdn.tgdd.vn//content/icon-laptop-96x96-1.png" alt="">Laptop</a></li>
             <li class="header__main__tablet"><a href="./tablet.html"><img
                         src="https://cdn.tgdd.vn//content/icon-tablet-96x96-1.png" alt="">Tablet</a></li>
-            <li class="header__main__phu-kien"><a href="./"><img
+            <li class="header__main__phu-kien"><a href="./phu-kien.html"><img
                         src="https://cdn.tgdd.vn//content/icon-phu-kien-96x96-1.png" alt="">Phụ kiện <ion-icon
                         name="caret-down-outline"></ion-icon></a>
                 <div class="phu-kien-box">
@@ -198,6 +284,7 @@
     </div>
 </header>
 <main>
+    
   <div class="laptop__slider-banner">
     <div class="laptop-slider">
             <img src="../asset/img/laptop/laptop-slider1.png" alt="">
