--- a/html/dich-vu-tien-ich.html
+++ b/html/dich-vu-tien-ich.html
@@ -7,6 +7,7 @@
     <title>Dịch vụ tiện ích</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="../css/file.css">
+    <link rel="icon" type="image/x-icon" href="../asset/logo.png">
     
 </head>
 <body>
