--- a/html/dich-vu-tien-ich.html
+++ b/html/dich-vu-tien-ich.html
@@ -54,7 +54,7 @@
                             src="https://cdn.tgdd.vn//content/icon-laptop-96x96-1.png" alt="">Laptop</a></li>
                 <li class="header__main__tablet"><a href="./tablet.html"><img
                             src="https://cdn.tgdd.vn//content/icon-tablet-96x96-1.png" alt="">Tablet</a></li>
-                <li class="header__main__phu-kien"><a href="./"><img
+                <li class="header__main__phu-kien"><a href="./phu-kien.html"><img
                             src="https://cdn.tgdd.vn//content/icon-phu-kien-96x96-1.png" alt="">Phụ kiện <ion-icon
                             name="caret-down-outline"></ion-icon></a>
                     <div class="phu-kien-box">
