--- a/html/hoi-dap.html
+++ b/html/hoi-dap.html
@@ -96,16 +96,22 @@
             </div>
         </div>
     </div>
+    <div class="header-top-banner">
+        <img src="../asset/img/homepage/head-banner1.png" alt="">
+        <img src="../asset/img/homepage/head-banner2.png" alt="">
+        <img src="../asset/img/homepage/head-banner3.png" alt="">
+    </div>
+
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <a href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
+            </div>
 
 
             <form action="" class="header__search">
@@ -138,7 +144,7 @@
                     <div class="phu-kien-box">
                         <div class="phu-kien-box__left">
                             <ul>
-                                <li class="box-details"><span>PHỤ KIỆN DI ĐỘNG</span></li>
+                                <li class="box-details" ><span>PHỤ KIỆN DI ĐỘNG</span></li>
                                 <li><a href="">Sạc, cáp</a></li>
                                 <li><a href="">Ốp lưng điện thoại</a></li>
                                 <li><a href="">Ốp lưng máy tính bảng</a></li>
@@ -185,14 +191,14 @@
                                     <li><a href="">Tai nghe</a></li>
                                     <li><a href="">Loa</a></li>
                                     <li><a href="">Micro thu âm điện thoại</a></li>
-
+                                    
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>THIẾT BỊ LƯU TRỮ</span></li>
                                     <li><a href="">Ổ cứng di động</a></li>
                                     <li><a href="">USB</a></li>
                                     <li><a href="">Thẻ nhớ</a></li>
-
+                
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>PHỤ KIỆN KHÁC</span></li>
@@ -205,7 +211,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="header__main__smartwatch"><a href=""><img
+                <li class="header__main__smartwatch"><a href="./smartwatch.html"><img
                             src="https://cdn.tgdd.vn//content/icon-smartwatch-96x96-1.png" alt=""> SmartWatch</a></li>
                 <li class="header__main__watch"><a href="./dong-ho.html"><img
                             src="https://cdn.tgdd.vn//content/watch-icon-96x96.png" alt="">Đồng hồ</a></li>
