--- a/html/index.html
+++ b/html/index.html
@@ -102,17 +102,16 @@
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
 
-    <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <a href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
+            </div>
 
 
             <form action="" class="header__search">
