--- a/html/lich-su-don-hang.html
+++ b/html/lich-su-don-hang.html
@@ -96,23 +96,22 @@
             </div>
         </div>
     </div>
-       <div class="header-top-banner">
+    <div class="header-top-banner">
         <img src="../asset/img/homepage/head-banner1.png" alt="">
         <img src="../asset/img/homepage/head-banner2.png" alt="">
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
 
-    <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <a href="#" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
+            </div>
 
 
             <form action="" class="header__search">
@@ -146,67 +145,67 @@
                         <div class="phu-kien-box__left">
                             <ul>
                                 <li class="box-details" ><span>PHỤ KIỆN DI ĐỘNG</span></li>
-                                <li><a href="#">Sạc, cáp</a></li>
-                                <li><a href="#">Ốp lưng điện thoại</a></li>
-                                <li><a href="#">Ốp lưng máy tính bảng</a></li>
-                                <li><a href="#">Miếng dán màn hình</a></li>
-                                <li><a href="#">Gậy chụp ảnh, Gimbal</a></li>
-                                <li><a href="#">Giá đỡ điện thoại</a></li>
-                                <li><a href="#">Đế, móc điện thoại</a></li>
-                                <li><a href="#">Túi chống nước</a></li>
-                                <li><a href="#">Túi đựng AirPods</a></li>
-                                <li><a href="#">AirTag</a></li>
-                                <li><a href="#">Phụ kiện Tablet</a></li>
+                                <li><a href="">Sạc, cáp</a></li>
+                                <li><a href="">Ốp lưng điện thoại</a></li>
+                                <li><a href="">Ốp lưng máy tính bảng</a></li>
+                                <li><a href="">Miếng dán màn hình</a></li>
+                                <li><a href="">Gậy chụp ảnh, Gimbal</a></li>
+                                <li><a href="">Giá đỡ điện thoại</a></li>
+                                <li><a href="">Đế, móc điện thoại</a></li>
+                                <li><a href="">Túi chống nước</a></li>
+                                <li><a href="">Túi đựng AirPods</a></li>
+                                <li><a href="">AirTag</a></li>
+                                <li><a href="">Phụ kiện Tablet</a></li>
                             </ul>
                         </div>
                         <div class="phu-kien-box__right">
                             <div class="phu-kien-box__right__above">
                                 <ul>
                                     <li class="box-details"><span>PHỤ KIỆN LAPTOP</span></li>
-                                    <li><a href="#">Chuột, bàn phím</a></li>
-                                    <li><a href="#">Thiết bị mạng</a></li>
-                                    <li><a href="#">Balo, túi chống sốc</a></li>
-                                    <li><a href="#">Giá đỡ laptop</a></li>
-                                    <li><a href="#">Phần mềm</a></li>
+                                    <li><a href="">Chuột, bàn phím</a></li>
+                                    <li><a href="">Thiết bị mạng</a></li>
+                                    <li><a href="">Balo, túi chống sốc</a></li>
+                                    <li><a href="">Giá đỡ laptop</a></li>
+                                    <li><a href="">Phần mềm</a></li>
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>THIẾT BỊ NHÀ THÔNG MINH</span></li>
-                                    <li><a href="#">Khoá điện tử</a></li>
-                                    <li><a href="#">Camera, Webcam</a></li>
-                                    <li><a href="#">Máy chiếu</a></li>
-                                    <li><a href="#">TV Box</a></li>
-                                    <li><a href="#">Ổ, bóng đèn thông minh</a></li>
+                                    <li><a href="">Khoá điện tử</a></li>
+                                    <li><a href="">Camera, Webcam</a></li>
+                                    <li><a href="">Máy chiếu</a></li>
+                                    <li><a href="">TV Box</a></li>
+                                    <li><a href="">Ổ, bóng đèn thông minh</a></li>
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>THƯƠNG HIỆU HÀNG ĐẦU</span></li>
-                                    <li><a href="#">Apple</a></li>
-                                    <li><a href="#">Samsung</a></li>
-                                    <li><a href="#">Sony</a></li>
-                                    <li><a href="#">JBL</a></li>
-                                    <li><a href="#">Anker</a></li>
+                                    <li><a href="">Apple</a></li>
+                                    <li><a href="">Samsung</a></li>
+                                    <li><a href="">Sony</a></li>
+                                    <li><a href="">JBL</a></li>
+                                    <li><a href="">Anker</a></li>
                                 </ul>
                             </div>
                             <div class="phu-kien-box__right__below">
                                 <ul>
                                     <li class="box-details"><span>THIẾT BỊ ÂM THANH</span></li>
-                                    <li><a href="#">Tai nghe</a></li>
-                                    <li><a href="#">Loa</a></li>
-                                    <li><a href="#">Micro thu âm điện thoại</a></li>
+                                    <li><a href="">Tai nghe</a></li>
+                                    <li><a href="">Loa</a></li>
+                                    <li><a href="">Micro thu âm điện thoại</a></li>
                                     
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>THIẾT BỊ LƯU TRỮ</span></li>
-                                    <li><a href="#">Ổ cứng di động</a></li>
-                                    <li><a href="#">USB</a></li>
-                                    <li><a href="#">Thẻ nhớ</a></li>
+                                    <li><a href="">Ổ cứng di động</a></li>
+                                    <li><a href="">USB</a></li>
+                                    <li><a href="">Thẻ nhớ</a></li>
                 
                                 </ul>
                                 <ul>
                                     <li class="box-details"><span>PHỤ KIỆN KHÁC</span></li>
-                                    <li><a href="#">Phụ kiện ô tô</a></li>
-                                    <li><a href="#">Máy tính cầm tay</a></li>
-                                    <li><a href="#">Quạt mini</a></li>
-                                    <li><a href="#">Pin tiểu</a></li>
+                                    <li><a href="">Phụ kiện ô tô</a></li>
+                                    <li><a href="">Máy tính cầm tay</a></li>
+                                    <li><a href="">Quạt mini</a></li>
+                                    <li><a href="">Pin tiểu</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -222,22 +221,22 @@
                     </a>
                     <ul class="header__main__pc-mayin__divcon">
                         <li>
-                            <a href="#">Máy in</a>
+                            <a href="">Máy in</a>
                         </li>
                         <li>
-                            <a href="#">Mực in</a>
+                            <a href="">Mực in</a>
                         </li>
                         <li>
-                            <a href="#">Màn hình máy tính</a>
+                            <a href="">Màn hình máy tính</a>
                         </li>
                         <li>
-                            <a href="#">Máy tính để bàn</a>
+                            <a href="">Máy tính để bàn</a>
                         </li>
                     </ul>
                 </li>
-                <li class="header__main__may-cu-gia-re"><a href="#">Máy cũ giá rẻ</a></li>
-                <li class="header__main__sim-the-cao"><a href="#">Sim, thẻ cào</a></li>
-                <li class="header__main__dich-vu-tien-ich"><a href="#">Dịch vụ tiện ích<ion-icon
+                <li class="header__main__may-cu-gia-re"><a href="">Máy cũ giá rẻ</a></li>
+                <li class="header__main__sim-the-cao"><a href="">Sim, thẻ cào</a></li>
+                <li class="header__main__dich-vu-tien-ich"><a href="">Dịch vụ tiện ích<ion-icon
                             name="caret-down-outline"></ion-icon></a>
                     <table class="header__main__dich-vu-tien-ich__box">
                         <tr class="table__columns">
