--- a/html/pc-mayin.html
+++ b/html/pc-mayin.html
@@ -96,32 +96,28 @@
     </div>
     <div class="header-top-banner">
         <img src="../asset/img/homepage/head-banner1.png" alt="">
-
-
         <img src="../asset/img/homepage/head-banner2.png" alt="">
-
-
         <img src="../asset/img/homepage/head-banner3.png" alt="">
-
     </div>
+
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <button href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </button>
+            </div>
 
 
-            <div action="" class="header__search">
+            <form action="" class="header__search">
                 <input type="text" class="header__search__text" placeholder="Bạn tìm gì?">
                 <button type="submit" class="header__search__button">
                     <ion-icon name="search-outline"></ion-icon>
                 </button>
-            </div>
+            </form>
             <a href="./lich-su-don-hang.html" class="header__history header__like__button">Lịch sử đơn hàng</a>
             <a href="./cart.html" class="header__cart header__like__button">
                 <ion-icon name="cart-outline"></ion-icon>Giỏ hàng
@@ -146,6 +142,7 @@
                     <div class="phu-kien-box">
                         <div class="phu-kien-box__left">
                             <ul>
+                                <li class="box-details" ><span>PHỤ KIỆN DI ĐỘNG</span></li>
                                 <li><a href="">Sạc, cáp</a></li>
                                 <li><a href="">Ốp lưng điện thoại</a></li>
                                 <li><a href="">Ốp lưng máy tính bảng</a></li>
@@ -162,19 +159,57 @@
                         <div class="phu-kien-box__right">
                             <div class="phu-kien-box__right__above">
                                 <ul>
-
+                                    <li class="box-details"><span>PHỤ KIỆN LAPTOP</span></li>
+                                    <li><a href="">Chuột, bàn phím</a></li>
+                                    <li><a href="">Thiết bị mạng</a></li>
+                                    <li><a href="">Balo, túi chống sốc</a></li>
+                                    <li><a href="">Giá đỡ laptop</a></li>
+                                    <li><a href="">Phần mềm</a></li>
                                 </ul>
                                 <ul>
-
+                                    <li class="box-details"><span>THIẾT BỊ NHÀ THÔNG MINH</span></li>
+                                    <li><a href="">Khoá điện tử</a></li>
+                                    <li><a href="">Camera, Webcam</a></li>
+                                    <li><a href="">Máy chiếu</a></li>
+                                    <li><a href="">TV Box</a></li>
+                                    <li><a href="">Ổ, bóng đèn thông minh</a></li>
                                 </ul>
                                 <ul>
-
+                                    <li class="box-details"><span>THƯƠNG HIỆU HÀNG ĐẦU</span></li>
+                                    <li><a href="">Apple</a></li>
+                                    <li><a href="">Samsung</a></li>
+                                    <li><a href="">Sony</a></li>
+                                    <li><a href="">JBL</a></li>
+                                    <li><a href="">Anker</a></li>
+                                </ul>
+                            </div>
+                            <div class="phu-kien-box__right__below">
+                                <ul>
+                                    <li class="box-details"><span>THIẾT BỊ ÂM THANH</span></li>
+                                    <li><a href="">Tai nghe</a></li>
+                                    <li><a href="">Loa</a></li>
+                                    <li><a href="">Micro thu âm điện thoại</a></li>
+                                    
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>THIẾT BỊ LƯU TRỮ</span></li>
+                                    <li><a href="">Ổ cứng di động</a></li>
+                                    <li><a href="">USB</a></li>
+                                    <li><a href="">Thẻ nhớ</a></li>
+                
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>PHỤ KIỆN KHÁC</span></li>
+                                    <li><a href="">Phụ kiện ô tô</a></li>
+                                    <li><a href="">Máy tính cầm tay</a></li>
+                                    <li><a href="">Quạt mini</a></li>
+                                    <li><a href="">Pin tiểu</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li class="header__main__smartwatch"><a href=""><img
+                <li class="header__main__smartwatch"><a href="./smartwatch.html"><img
                             src="https://cdn.tgdd.vn//content/icon-smartwatch-96x96-1.png" alt=""> SmartWatch</a></li>
                 <li class="header__main__watch"><a href="./dong-ho.html"><img
                             src="https://cdn.tgdd.vn//content/watch-icon-96x96.png" alt="">Đồng hồ</a></li>
@@ -204,13 +239,13 @@
                     <table class="header__main__dich-vu-tien-ich__box">
                         <tr class="table__columns">
                             <th>
-                                <p>TRẢ GÓP, ĐIỆN NƯỚC, VÉ CÁC LOẠI</p>
+                                <p><span class="box-details">TRẢ GÓP, ĐIỆN NƯỚC, VÉ CÁC LOẠI</span></p>
                             </th>
                             <th>
-                                <p>INTERNET, CƯỚC, TRUYỀN HÌNH</p>
+                                <p><span class="box-details">INTERNET, CƯỚC, TRUYỀN HÌNH</span></p>
                             </th>
                             <th>
-                                <p>BẢO HIỂM, VIỆN PHÍ</p>
+                                <p><span class="box-details">BẢO HIỂM, VIỆN PHÍ</span></p>
                             </th>
                         </tr>
                         <tr>
