--- a/html/dich-vu-tien-ich.html
+++ b/html/dich-vu-tien-ich.html
@@ -11,23 +11,107 @@
     
 </head>
 <body>
+    <div class="form">
+        <div>
+            <div class="form-top">
+                <div class="form-top-top">
+                    <p>
+                        Địa chỉ đã chọn: Phường Điện Biên, Quận Ba Đình, Hà Nội
+                    </p>
+                    <button>
+                        <ion-icon name="close-outline"></ion-icon> Đóng
+                    </button>
+                </div>
+                <form action="">
+                    <ion-icon name="search-outline"></ion-icon>
+                    <input type="text">
+                </form>
+            </div>
+            <div class="form-bottom">
+                <h4>
+                    Hoặc chọn tỉnh, thành phố
+                </h4>
+                <ul>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                    <li>
+                        Hà Nội
+                    </li>
+                    <li>
+                        TP Hồ Chí Minh
+                    </li>
+                    <li>
+                        Quảng Bình
+                    </li>
+                    <li>
+                        Ninh Thuận
+                    </li>
+                    <li>
+                        An Giang
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="header-top-banner">
         <img src="../asset/img/homepage/head-banner1.png" alt="">
         <img src="../asset/img/homepage/head-banner2.png" alt="">
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
 
-    <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <a href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
+            </div>
 
 
             <form action="" class="header__search">
@@ -150,9 +234,9 @@
                         </li>
                     </ul>
                 </li>
-                <li class="header__main__may-cu-gia-re"><a href="./may-cu-gia-re.html">Máy cũ giá rẻ</a></li>
-                <li class="header__main__sim-the-cao"><a href="./sim-thecao.html">Sim, thẻ cào</a></li>
-                <li class="header__main__dich-vu-tien-ich"><a href="./dich-vu-tien-ich.html">Dịch vụ tiện ích<ion-icon
+                <li class="header__main__may-cu-gia-re"><a href="">Máy cũ giá rẻ</a></li>
+                <li class="header__main__sim-the-cao"><a href="">Sim, thẻ cào</a></li>
+                <li class="header__main__dich-vu-tien-ich"><a href="">Dịch vụ tiện ích<ion-icon
                             name="caret-down-outline"></ion-icon></a>
                     <table class="header__main__dich-vu-tien-ich__box">
                         <tr class="table__columns">
