--- a/html/sanpham.html
+++ b/html/sanpham.html
@@ -96,96 +96,194 @@
             </div>
         </div>
     </div>
-    <div class="form">
-        <div>
-            <div class="form-top">
-                <div class="form-top-top">
-                    <p>
-                        Địa chỉ đã chọn: Phường Điện Biên, Quận Ba Đình, Hà Nội
-                    </p>
-                    <button>
-                        <ion-icon name="close-outline"></ion-icon> Đóng
-                    </button>
-                </div>
-                <form action="">
-                    <ion-icon name="search-outline"></ion-icon>
-                    <input type="text">
-                </form>
-            </div>
-            <div class="form-bottom">
-                <h4>
-                    Hoặc chọn tỉnh, thành phố
-                </h4>
-                <ul>
-                    <li>
-                        Hà Nội
-                    </li>
-                    <li>
-                        TP Hồ Chí Minh
-                    </li>
-                    <li>
-                        Quảng Bình
-                    </li>
-                    <li>
-                        Ninh Thuận
-                    </li>
-                    <li>
-                        An Giang
-                    </li>
-                    <li>
-                        Hà Nội
-                    </li>
-                    <li>
-                        TP Hồ Chí Minh
-                    </li>
-                    <li>
-                        Quảng Bình
-                    </li>
-                    <li>
-                        Ninh Thuận
-                    </li>
-                    <li>
-                        An Giang
-                    </li>
-                    <li>
-                        Hà Nội
-                    </li>
-                    <li>
-                        TP Hồ Chí Minh
-                    </li>
-                    <li>
-                        Quảng Bình
-                    </li>
-                    <li>
-                        Ninh Thuận
-                    </li>
-                    <li>
-                        An Giang
-                    </li>
-                    <li>
-                        Hà Nội
-                    </li>
-                    <li>
-                        TP Hồ Chí Minh
-                    </li>
-                    <li>
-                        Quảng Bình
-                    </li>
-                    <li>
-                        Ninh Thuận
-                    </li>
-                    <li>
-                        An Giang
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <div class="header-top-banner">
         <img src="../asset/img/homepage/head-banner1.png" alt="">
         <img src="../asset/img/homepage/head-banner2.png" alt="">
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
+
+    <header>
+        <div class="header__top">
+            <a href="./homepage.html" class="header__logo">
+                <img src="../asset/thegioididong.jpeg" alt="">
+            </a>
+
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+                <span header__address__specific>Hà Nội</span>
+                <ion-icon name="caret-down-outline"></ion-icon>
+            </div>
+
+
+            <form action="" class="header__search">
+                <input type="text" class="header__search__text" placeholder="Bạn tìm gì?">
+                <button type="submit" class="header__search__button">
+                    <ion-icon name="search-outline"></ion-icon>
+                </button>
+            </form>
+            <a href="./lich-su-don-hang.html" class="header__history header__like__button">Lịch sử đơn hàng</a>
+            <a href="./cart.html" class="header__cart header__like__button">
+                <ion-icon name="cart-outline"></ion-icon>Giỏ hàng
+            </a>
+            <ul class="header__listop">
+                <li><a href="./hai4-h-cong-nghe.html">24h <br> Công nghệ</a></li>
+                <li><a href="./hoi-dap.html">Hỏi đáp</a></li>
+                <li><a href="./game-app.html">Game App</a></li>
+            </ul>
+        </div>
+        <div class="header__main">
+            <ul>
+                <li class="header__main__phone"><a href="./dien-thoai.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-phone-96x96-2.png" alt="">Điện thoại</a></li>
+                <li class="header__main__laptop"><a href="./laptop.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-laptop-96x96-1.png" alt="">Laptop</a></li>
+                <li class="header__main__tablet"><a href="./tablet.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-tablet-96x96-1.png" alt="">Tablet</a></li>
+                <li class="header__main__phu-kien"><a href="./phu-kien.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-phu-kien-96x96-1.png" alt="">Phụ kiện <ion-icon
+                            name="caret-down-outline"></ion-icon></a>
+                    <div class="phu-kien-box">
+                        <div class="phu-kien-box__left">
+                            <ul>
+                                <li class="box-details" ><span>PHỤ KIỆN DI ĐỘNG</span></li>
+                                <li><a href="">Sạc, cáp</a></li>
+                                <li><a href="">Ốp lưng điện thoại</a></li>
+                                <li><a href="">Ốp lưng máy tính bảng</a></li>
+                                <li><a href="">Miếng dán màn hình</a></li>
+                                <li><a href="">Gậy chụp ảnh, Gimbal</a></li>
+                                <li><a href="">Giá đỡ điện thoại</a></li>
+                                <li><a href="">Đế, móc điện thoại</a></li>
+                                <li><a href="">Túi chống nước</a></li>
+                                <li><a href="">Túi đựng AirPods</a></li>
+                                <li><a href="">AirTag</a></li>
+                                <li><a href="">Phụ kiện Tablet</a></li>
+                            </ul>
+                        </div>
+                        <div class="phu-kien-box__right">
+                            <div class="phu-kien-box__right__above">
+                                <ul>
+                                    <li class="box-details"><span>PHỤ KIỆN LAPTOP</span></li>
+                                    <li><a href="">Chuột, bàn phím</a></li>
+                                    <li><a href="">Thiết bị mạng</a></li>
+                                    <li><a href="">Balo, túi chống sốc</a></li>
+                                    <li><a href="">Giá đỡ laptop</a></li>
+                                    <li><a href="">Phần mềm</a></li>
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>THIẾT BỊ NHÀ THÔNG MINH</span></li>
+                                    <li><a href="">Khoá điện tử</a></li>
+                                    <li><a href="">Camera, Webcam</a></li>
+                                    <li><a href="">Máy chiếu</a></li>
+                                    <li><a href="">TV Box</a></li>
+                                    <li><a href="">Ổ, bóng đèn thông minh</a></li>
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>THƯƠNG HIỆU HÀNG ĐẦU</span></li>
+                                    <li><a href="">Apple</a></li>
+                                    <li><a href="">Samsung</a></li>
+                                    <li><a href="">Sony</a></li>
+                                    <li><a href="">JBL</a></li>
+                                    <li><a href="">Anker</a></li>
+                                </ul>
+                            </div>
+                            <div class="phu-kien-box__right__below">
+                                <ul>
+                                    <li class="box-details"><span>THIẾT BỊ ÂM THANH</span></li>
+                                    <li><a href="">Tai nghe</a></li>
+                                    <li><a href="">Loa</a></li>
+                                    <li><a href="">Micro thu âm điện thoại</a></li>
+                                    
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>THIẾT BỊ LƯU TRỮ</span></li>
+                                    <li><a href="">Ổ cứng di động</a></li>
+                                    <li><a href="">USB</a></li>
+                                    <li><a href="">Thẻ nhớ</a></li>
+                
+                                </ul>
+                                <ul>
+                                    <li class="box-details"><span>PHỤ KIỆN KHÁC</span></li>
+                                    <li><a href="">Phụ kiện ô tô</a></li>
+                                    <li><a href="">Máy tính cầm tay</a></li>
+                                    <li><a href="">Quạt mini</a></li>
+                                    <li><a href="">Pin tiểu</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="header__main__smartwatch"><a href="./smartwatch.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-smartwatch-96x96-1.png" alt=""> SmartWatch</a></li>
+                <li class="header__main__watch"><a href="./dong-ho.html"><img
+                            src="https://cdn.tgdd.vn//content/watch-icon-96x96.png" alt="">Đồng hồ</a></li>
+                <li class="header__main__pc-mayin"><a href="./pc-mayin.html"><img
+                            src="https://cdn.tgdd.vn//content/icon-pc-96x96.png" alt="">PC/ Máy in
+                        <ion-icon name="caret-down-outline"></ion-icon>
+                    </a>
+                    <ul class="header__main__pc-mayin__divcon">
+                        <li>
+                            <a href="">Máy in</a>
+                        </li>
+                        <li>
+                            <a href="">Mực in</a>
+                        </li>
+                        <li>
+                            <a href="">Màn hình máy tính</a>
+                        </li>
+                        <li>
+                            <a href="">Máy tính để bàn</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="header__main__may-cu-gia-re"><a href="">Máy cũ giá rẻ</a></li>
+                <li class="header__main__sim-the-cao"><a href="">Sim, thẻ cào</a></li>
+                <li class="header__main__dich-vu-tien-ich"><a href="">Dịch vụ tiện ích<ion-icon
+                            name="caret-down-outline"></ion-icon></a>
+                    <table class="header__main__dich-vu-tien-ich__box">
+                        <tr class="table__columns">
+                            <th>
+                                <p><span class="box-details">TRẢ GÓP, ĐIỆN NƯỚC, VÉ CÁC LOẠI</span></p>
+                            </th>
+                            <th>
+                                <p><span class="box-details">INTERNET, CƯỚC, TRUYỀN HÌNH</span></p>
+                            </th>
+                            <th>
+                                <p><span class="box-details">BẢO HIỂM, VIỆN PHÍ</span></p>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>Đóng tiền trả góp</td>
+                            <td>Đóng tiền net FPT</td>
+                            <td>Mua bảo hiểm xe máy, ô tô</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Đóng tiền điện
+                            </td>
+                            <td>Đóng tiền net, cáp VNPT</td>
+                            <td>Đóng tiền bảo hiểm</td>
+                        </tr>
+                        <tr>
+                            <td>Đóng tiền nước</td>
+                            <td>
+                                Đóng tiền cước điện thoại trả sau
+                            </td>
+                            <td>
+                                Đóng viện phí đại học Y Dược TPHCM
+                            </td>
+                        </tr>
+                        <tr>
+
+                            <td>Đóng tiền vé tàu, xe, máy bay</td>
+                            <td>
+                                Lắp đặt Internet truyền hình
+                            </td>
+                            <td>Mua gói cước truyền hình</td>
+                        </tr>
+                    </table>
+                </li>
+            </ul>
+        </div>
+    </header>
 
     <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
     <header>
