--- a/html/smartwatch.html
+++ b/html/smartwatch.html
@@ -103,17 +103,16 @@
         <img src="../asset/img/homepage/head-banner3.png" alt="">
     </div>
 
-    <!-- <form action="#"><input type="checkbox" name="header__diachi__buttonao"></form> -->
     <header>
         <div class="header__top">
             <a href="./homepage.html" class="header__logo">
                 <img src="../asset/thegioididong.jpeg" alt="">
             </a>
 
-            <a href="" class="header__address header__like__button">Xem giá, tồn kho tại:
+            <div href="" class="header__address header__like__button">Xem giá, tồn kho tại:
                 <span header__address__specific>Hà Nội</span>
                 <ion-icon name="caret-down-outline"></ion-icon>
-            </a>
+            </div>
 
 
             <form action="" class="header__search">
@@ -213,7 +212,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="header__main__smartwatch"><a href=""><img
+                <li class="header__main__smartwatch"><a href="./smartwatch.html"><img
                             src="https://cdn.tgdd.vn//content/icon-smartwatch-96x96-1.png" alt=""> SmartWatch</a></li>
                 <li class="header__main__watch"><a href="./dong-ho.html"><img
                             src="https://cdn.tgdd.vn//content/watch-icon-96x96.png" alt="">Đồng hồ</a></li>
