--- a/html/tablet.html
+++ b/html/tablet.html
@@ -600,7 +600,7 @@
 
   <div class="dienthoai-laptop-content">
     <div class="div-tablet-content-content">
-       <a class="dienthoai-laptop-content__items">
+       <a class="dienthoai-laptop-content__items" href="sanpham.html">
          <img src="../asset/img/tablet/tablet__main__img1.jpg" alt="">
          <p>
            iPad Pro M2 12.9" WiFi Cellular 2TB
