--- a/html/dien-thoai.html
+++ b/html/dien-thoai.html
@@ -599,7 +599,7 @@
 
         <div class="dienthoai-laptop-content">
             <div class="div-laptop-content-content">
-               <a class="dienthoai-laptop-content__items">
+               <a class="dienthoai-laptop-content__items" href="sanpham.html">
                  <img src="../asset/img/dienthoai/dienthoai__main__div-img1.jpg" alt="">
                  <p>
                    IPhone 14 Plus
