--- a/html/homepage.html
+++ b/html/homepage.html
@@ -235,9 +235,9 @@
                         </li>
                     </ul>
                 </li>
-                <li class="header__main__may-cu-gia-re"><a href="sanpham.html">Máy cũ giá rẻ</a></li>
-                <li class="header__main__sim-the-cao"><a href="sanpham.html">Sim, thẻ cào</a></li>
-                <li class="header__main__dich-vu-tien-ich"><a href="sanpham.html">Dịch vụ tiện ích<ion-icon
+                <li class="header__main__may-cu-gia-re"><a href="docu.html">Máy cũ giá rẻ</a></li>
+                <li class="header__main__sim-the-cao"><a href="sim-thecao.html">Sim, thẻ cào</a></li>
+                <li class="header__main__dich-vu-tien-ich"><a href="dich-vu-tien-ich.html">Dịch vụ tiện ích<ion-icon
                             name="caret-down-outline"></ion-icon></a>
                     <table class="header__main__dich-vu-tien-ich__box">
                         <tr class="table__columns">
