--- a/html/docu.html
+++ b/html/docu.html
@@ -672,6 +672,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>   
