--- a/html/hoi-dap.html
+++ b/html/hoi-dap.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <link rel="icon" type="image/x-icon" href="../asset/logo.png">
 
     <link rel="stylesheet" href="../css/file.css">
